--- a/desafio38/package.json
+++ b/desafio38/package.json
@@ -6,7 +6,9 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
+    "graphql": "^15.8.0",
     "mongoose": "^6.0.15",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.0",
@@ -19,7 +21,6 @@
   "name": "desafio38",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
