--- a/desafio39/package.json
+++ b/desafio39/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha test/products.test.js",
+    "test": "mocha test/*.test.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "axios": "^0.24.0",
-    "mocha": "^9.1.3"
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "supertest": "^6.1.6"
   }
 }
